--- a/homework/D01 Numpy.ipynb
+++ b/homework/D01 Numpy.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "id": "5FFeFSvoEtRP"
    },
@@ -58,22 +58,22 @@
     {
      "data": {
       "text/plain": [
-       "array([ 2,  4,  6,  8, 10, 12, 14, 16, 18, 20])"
+       "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18, 20])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#2.呈上題，將以上數列取出偶數。\n",
-    "a[2:21:2]"
+    "a[0:21:2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "id": "7-HcNGFsFD-_"
    },
@@ -84,7 +84,7 @@
        "array([ 0,  3,  6,  9, 12, 15, 18])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
