--- a/homework/D04.ipynb
+++ b/homework/D04.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "id": "owy7B7Us2ZEM"
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "executionInfo": {
      "elapsed": 818,
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "executionInfo": {
      "elapsed": 1269,
@@ -98,21 +98,20 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True,  True,  True,  True])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True  True  True  True  True]\n",
+      "True\n"
+     ]
     }
    ],
    "source": [
     "#2.是否全班同學最高分都是國文?\n",
     "a = np.greater(chinese_score,english_score)\n",
     "b = np.greater(chinese_score,math_score)\n",
-    "np.logical_and(a,b)"
+    "print(np.logical_and(a,b))\n",
+    "print(np.logical_and(a,b).all())"
    ]
   },
   {
