--- a/homework/D04.ipynb
+++ b/homework/D04.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "id": "owy7B7Us2ZEM"
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 818,
@@ -62,8 +62,8 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "3 person\n"
      ]
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 1269,
@@ -98,11 +98,10 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[ True  True  True  True  True  True]\n",
-      "True\n"
+      "[ True  True  True  True  True  True]\nTrue\n"
      ]
     }
    ],
@@ -113,15 +112,6 @@
     "print(np.logical_and(a,b))\n",
     "print(np.logical_and(a,b).all())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "rMeW74sqyIcy"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -146,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.8-final"
   }
  },
  "nbformat": 4,
