--- a/homework/D02.ipynb
+++ b/homework/D02.ipynb
@@ -26,20 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "id": "9U3itXkFKqV4"
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'1.18.5'"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 1
     }
    ],
    "source": [
@@ -49,12 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "id": "kLjyVid_JpIC"
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[ 0,  5, 10, 15, 20, 25],\n",
@@ -64,9 +65,8 @@
        "       [ 4,  9, 14, 19, 24, 29]])"
       ]
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
    "source": [
@@ -78,26 +78,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "id": "X1PZ16iqXWOe"
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(array([0, 1, 2, 3, 4]), array([5, 0, 1, 2, 3]))"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
     "#2.呈上題的array，找出被6除餘1的數的索引\n",
     "np.where(array1%6==1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -121,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.8-final"
   }
  },
  "nbformat": 4,
