--- a/homework/05 Homework_維元.ipynb
+++ b/homework/05 Homework_維元.ipynb
@@ -34,38 +34,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 記得先 Import 正確的套件\n",
-    "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "import numpy as np\n",
+    "a = np.arange(1,12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "5QrYoyNWsvFS"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0  1  2 -3 -4 -5 -6 -7  8  9 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "a[(a > 2) & (a < 7)] = a[(a > 2) & (a < 7)]*-1"
    ]
   },
   {
@@ -78,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -86,48 +73,18 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "6\n"
+      "4\n"
      ]
     }
    ],
    "source": [
     "A = np.random.rand(3, 6)\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "print(np.sum(A>0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -136,9 +93,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python388jvsc74a57bd0b44203dd8bda8e907684ff1cf22a6dc030a7ee0c765fd866a29b3a101f680b73",
+   "display_name": "Python 3.8.8 64-bit ('data': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -150,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
