--- a/Sample/07 Answer_維元.ipynb
+++ b/Sample/07 Answer_維元.ipynb
@@ -30,24 +30,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. 請比較對一個 1000 x 100 x 100 的陣列，使用不同方法對每一個元素 +1 的時間比較。\n",
+    "### 1. 請比較對一個 100 x 100 x 100 的陣列，使用不同方法對每一個元素 +1 的時間比較。\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 記得先 Import 正確的套件\n",
-    "import numpy as np"
+    "\n",
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -55,21 +56,19 @@
    },
    "outputs": [],
    "source": [
-    "Z = np.random.randint(0, 10, 1000000).reshape(100, 100, 100)"
+    "Z = np.random.randint(0, 100, 1000000).reshape(100, 100, 100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "60.6 ns ± 19.7 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "32.3 ns ± 8.41 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -83,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "23 ns ± 7.82 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "35.1 ns ± 11.3 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -102,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "23.9 ns ± 7.83 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "39.7 ns ± 5.85 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -139,7 +138,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[0 1 7 4 7 4 2 1 6 5 2 8 0 6 5 8 9 3 4 3 9 7 7 8 8 2 7 9 5 8 1 2 1 0 2 8 7\n 4 3 3 7 3 8 5 1 9 2 2 7 3]\n"
+      "[0 3 4 4 1 1 8 1 5 2 8 4 4 5 3 5 7 3 1 0 9 3 3 0 2 0 8 7 9 4 7 1 6 6 0 9 9\n 6 4 6 5 1 4 8 6 6 9 1 4 5]\n"
      ]
     }
    ],
@@ -151,18 +150,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "7"
+       "4"
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 7
     }
    ],
    "source": [
@@ -172,18 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([ 2,  4, 21, 22, 26, 36, 40, 48])"
+       "array([ 2,  3, 11, 12, 29, 38, 42, 48])"
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 8
     }
    ],
    "source": [
@@ -199,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[0, 2, 0, 4, 6, 5]\n[0, 2, 0, 4, 6, 5]\n[[8, 5, 3, 8], [7, 2, 1, 0], [4, 7, 1, 6]]\n[array([8, 5, 3, 8]), array([7, 2, 1, 0]), array([4, 7, 1, 6])]\n[[[3, 3], [8, 8], [0, 1]], [[3, 8], [9, 5], [1, 7]]]\n[array([[3, 3],\n       [8, 8],\n       [0, 1]]), array([[3, 8],\n       [9, 5],\n       [1, 7]])]\n"
+      "[0, 7, 0, 3, 1, 1]\n[0, 7, 0, 3, 1, 1]\n[[8, 6, 9, 8], [5, 7, 7, 3], [1, 9, 5, 6]]\n[array([8, 6, 9, 8]), array([5, 7, 7, 3]), array([1, 9, 5, 6])]\n[[[0, 9], [3, 2], [2, 2]], [[7, 7], [1, 7], [0, 8]]]\n[array([[0, 9],\n       [3, 2],\n       [2, 2]]), array([[7, 7],\n       [1, 7],\n       [0, 8]])]\n"
      ]
     }
    ],
@@ -231,18 +230,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[0, 2, 0, 4, 6, 5]\n[[8, 5, 3, 8], [7, 2, 1, 0], [4, 7, 1, 6]]\n[[[3, 3], [8, 8], [0, 1]], [[3, 8], [9, 5], [1, 7]]]\n"
+      "[0, 7, 0, 3, 1, 1]\n[[8, 6, 9, 8], [5, 7, 7, 3], [1, 9, 5, 6]]\n[[[0, 9], [3, 2], [2, 2]], [[7, 7], [1, 7], [0, 8]]]\n"
      ]
     }
    ],
    "source": [
+    "## 進階版\n",
+    "\n",
     "def tolist(iterable):\n",
     "    if type(iterable) != np.ndarray:\n",
     "        return iterable\n",
@@ -252,18 +253,11 @@
     "print(tolist(b))\n",
     "print(tolist(c))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "colab": {
-   "name": "Day_023_HW.ipynb",
+   "name": "Day_023_Reduce_Skewness_Ans.ipynb",
    "provenance": []
   },
   "kernelspec": {
