--- a/Sample/D-01 Numpy S.ipynb
+++ b/Sample/D-01 Numpy S.ipynb
@@ -1692,7 +1692,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1706,7 +1706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
