--- a/Sample/D-02 Numpy 陣列中不同的資料型態_Example.ipynb
+++ b/Sample/D-02 Numpy 陣列中不同的資料型態_Example.ipynb
@@ -22,15 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<module 'numpy' from '/Users/yukaizhuo/opt/anaconda3/envs/datasci/lib/python3.8/site-packages/numpy/__init__.py'>\n",
-      "1.21.0\n"
+      "<module 'numpy' from '/opt/anaconda3/envs/kk/lib/python3.9/site-packages/numpy/__init__.py'>\n",
+      "1.23.4\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "       [10, 11, 12, 13, 14]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
      "text": [
       "True\n",
       "False\n",
-      "True\n"
+      "False\n"
      ]
     },
     {
@@ -119,7 +119,7 @@
      "text": [
       "<>:4: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
       "<>:4: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "<ipython-input-7-cd442a1afa60>:4: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "/var/folders/21/xzzbkpn55v1563g8xmbwg9dh0000gn/T/ipykernel_14986/2615449711.py:4: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
       "  print(a.dtype is 'int64')\n"
      ]
     }
@@ -128,13 +128,13 @@
     "# numpy 中的型態判斷\n",
     "\n",
     "print(a.dtype == 'int64') \n",
-    "print(a.dtype is 'int64') \n",
-    "print(a.dtype is np.dtype('int64'))\n"
+    "print(a.dtype is 'int64')\n",
+    "print(a.dtype is np.int64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -144,15 +144,6 @@
       "True\n",
       "True\n",
       "True\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-9-9eb392b9457f>:4: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  print(a.dtype == np.int) # True\n"
      ]
     }
    ],
@@ -163,32 +154,11 @@
     "print(a.dtype == np.int64) # True\n",
     "print(a.dtype is np.dtype('int64')) # True\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
