--- a/Sample/D02.ipynb
+++ b/Sample/D02.ipynb
@@ -2026,7 +2026,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2040,7 +2040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
