--- a/homework/D-04 NumPy 陣列的算術運算_Homework.ipynb
+++ b/homework/D-04 NumPy 陣列的算術運算_Homework.ipynb
@@ -51,19 +51,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "5QrYoyNWsvFS"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 40  60  80 100]\n",
+      "[21 32 43 54]\n",
+      "[21 31 41 51]\n",
+      "[21 31 41 51]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (4,) (2,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39mprint\u001b[39m(a \u001b[39m+\u001b[39m c)\n\u001b[1;32m     11\u001b[0m \u001b[39mprint\u001b[39m(a \u001b[39m+\u001b[39m d)\n\u001b[0;32m---> 12\u001b[0m \u001b[39mprint\u001b[39m(a \u001b[39m+\u001b[39;49m e)\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (4,) (2,) "
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "a = np.array( [20,30,40,50] )\n",
+    "b = np.array( [1,2,3,4] ) \n",
+    "c = 1\n",
+    "d = np.array( [1] )\n",
+    "e = np.array( [1,2] ) \n",
+    "\n",
     "print(a + a)\n",
     "print(a + b)\n",
     "print(a + c)\n",
     "print(a + d)\n",
-    "print(a + e)"
+    "print(a + e) #因矩陣e不是單一矩陣元素，所以無法利用廣播特性進行相加"
    ]
   },
   {
@@ -75,18 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 記得先 Import 正確的套件\n",
-    "\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,9 +134,7 @@
     "A = np.ones(3)*1\n",
     "B = np.ones(3)*2\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "print((A+B)*(-A/2))"
    ]
   },
   {
@@ -140,88 +171,8 @@
     "A = np.ones((1,6))\n",
     "B = np.ones((6,1))\n",
     "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# [作業目標]\n",
-    "\n",
-    "1. [簡答題] 請問下列程式碼，運算結果分別為何？\n",
-    "\n",
-    "```\n",
-    "a = np.array( [20,30,40,50] )\n",
-    "b = np.array( [1,2,3,4] ) \n",
-    "c = 1\n",
-    "d = np.array( [1] )\n",
-    "e = np.array( [1,2] ) \n",
-    "```\n",
-    "\n",
-    "2. 如何在不用迴圈的情況下計算 (A+B)*(-A/2) ？那用迴圈怎麼做？\n",
-    "\n",
-    "3. 請問如何計算「1x6 的單位矩陣」和「6x1 的單位矩陣」的內積和外積？\n",
-    "\n",
-    "# 作業 \n",
-    "\n",
-    "### 1. [簡答題] 請問下列程式碼，運算結果分別為何？\n",
-    "\n",
-    "```\n",
-    "a = np.array( [20,30,40,50] )\n",
-    "b = np.array( [1,2,3,4] ) \n",
-    "c = 1\n",
-    "d = np.array( [1] )\n",
-    "e = np.array( [1,2] ) \n",
-    "```\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "### 2. 如何在不用迴圈的情況下計算 (A+B)*(-A/2) ？那用迴圈怎麼做？\n",
-    "\n",
-    "\n",
-    "A = np.ones(3)*1\n",
-    "B = np.ones(3)*2\n",
-    "\n",
-    "print((A + B) * (-A / 2))\n",
-    "\n",
-    "### 3. 請問如何計算「1x6 的單位矩陣」和「6x1 的單位矩陣」的內積和外積？\n",
-    "\n",
-    "\n",
-    "# 記得先 Import 正確的套件\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "# 參考解答\n",
-    "\n",
-    "A = np.ones((1,6))\n",
-    "B = np.ones((6,1))\n",
-    "\n",
     "print(A * B)\n",
-    "print(A @ B)\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(A @ B)"
    ]
   }
  ],
@@ -231,7 +182,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('kk')",
    "language": "python",
    "name": "python3"
   },
@@ -246,6 +197,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4cbebd78757e36a78335d39c908a8d4b68c912ddee07d9d11cd117fcb5ff83fe"
+   }
   }
  },
  "nbformat": 4,
